Replaced in-memory data by Entity Framework

--- a/IntroductionToAspMVC/appsettings.json
+++ b/IntroductionToAspMVC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=.\\SQLEXPRESS; Database=ASPDB; Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
